PLAN.md: rewrite to current state through R12 (executed) + R13 (planned)
Was stale (header still cited 5 closes/$248.80; rounds jumbled; dormant
inventory listed subsystems since deleted). Now: current record (9 closes,
+$280.20, real commissions), R12 in full (Tier A hardening, Tier B
evidence-backed strategy, Tier C ~6,650 LOC retired), R13 lens plan
(security/supply-chain incl. the ib_insync EOL question, regime dependence +
market-catastrophe playbook, human factors, shadow referee; market-impact
analysis recorded as right-sized OUT with its revisit threshold), amended
go-live gates (100 closes for funding per R9 statistics, DD vs deployed risk,
the slippage NUMBER, the ML ablation as a gate, the two-animals caveat),
post-R12 dormant inventory, and the operating rules incl. deploy discipline.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>